# networkmanagement

./: .gitignore  CMakeLists.txt  networkmanagement_0.1+git20110526.911025d.orig.tar.gz.delta  networkmanagement_0.1+git20110526.911025d.orig.tar.gz.id  networkmanagement_0.9.0.1.orig.tar.bz2.delta  networkmanagement_0.9.0.1.orig.tar.bz2.id  networkmanagement_0.9.0.2.orig.tar.bz2.delta  networkmanagement_0.9.0.2.orig.tar.bz2.id  networkmanagement_0.9.0.3.orig.tar.bz2.delta  networkmanagement_0.9.0.3.orig.tar.bz2.id  networkmanagement_0.9.0.6.orig.tar.bz2.delta  networkmanagement_0.9.0.6.orig.tar.bz2.id  networkmanagement_0.9.0.7.orig.tar.bz2.delta  networkmanagement_0.9.0.7.orig.tar.bz2.id  networkmanagement_0.9.0.8.orig.tar.bz2.delta  networkmanagement_0.9.0.8.orig.tar.bz2.id  networkmanagement_0.9.0.9.orig.tar.bz2.delta  networkmanagement_0.9.0.9.orig.tar.bz2.id  networkmanagement_0.9.0.orig.tar.bz2.delta  networkmanagement_0.9.0.orig.tar.bz2.id  networkmanagement_0.9~git20110901.2144cb1.orig.tar.gz.delta  networkmanagement_0.9~git20110901.2144cb1.orig.tar.gz.id  networkmanagement_0.9~git20110904.06145dc.orig.tar.gz.delta  networkmanagement_0.9~git20110904.06145dc.orig.tar.gz.id  networkmanagement_0.9~git20110916.28b3101.orig.tar.gz.delta  networkmanagement_0.9~git20110916.28b3101.orig.tar.gz.id  networkmanagement_0.9~git20111002.90c59c3.orig.tar.gz.delta  networkmanagement_0.9~git20111002.90c59c3.orig.tar.gz.id  networkmanagement_0.9~git20111103.1240c6f.orig.tar.gz.delta  networkmanagement_0.9~git20111103.1240c6f.orig.tar.gz.id  networkmanagement_0.9~git20111126.1ef1677.orig.tar.gz.delta  networkmanagement_0.9~git20111126.1ef1677.orig.tar.gz.id  networkmanagement_0.9~git20120122.edc9568.orig.tar.gz.delta  networkmanagement_0.9~git20120122.edc9568.orig.tar.gz.id  plasma-widget-networkmanagement_0.1+git20110318.941cde9.orig.tar.gz.delta  plasma-widget-networkmanagement_0.1+git20110318.941cde9.orig.tar.gz.id  plasma-widget-networkmanagement_0.1~svn1007929.orig.tar.gz.delta  plasma-widget-networkmanagement_0.1~svn1007929.orig.tar.gz.id  plasma-widget-networkmanagement_0.1~svn1013816.orig.tar.gz.delta  plasma-widget-networkmanagement_0.1~svn1013816.orig.tar.gz.id  (+18 more)
po/: CMakeLists.txt
po/ar/: libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/bs/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/ca/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/ca@valencia/: libknetworkmanager.po  plasma_applet_networkmanagement.po
po/cs/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/da/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/de/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/el/: libknetworkmanager.po  plasma_applet_networkmanagement.po
po/en_GB/: libknetworkmanager.po  plasma_applet_networkmanagement.po
po/eo/: libknetworkmanager.po  plasma_applet_networkmanagement.po
po/es/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/et/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/fa/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/fi/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/fr/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/ga/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  solidcontrolnm09.po
po/gl/: knetworkmanager.po  libknetworkmanager.po  plasma_applet_networkmanagement.po  (+1 more)
(+172 files in other folders)
