find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)
add_subdirectory(sq)
add_subdirectory(lv)
add_subdirectory(nb)
add_subdirectory(ca@valencia)
add_subdirectory(mai)
add_subdirectory(cs)
add_subdirectory(sk)
add_subdirectory(hr)
add_subdirectory(th)
add_subdirectory(is)
add_subdirectory(wa)
add_subdirectory(eo)
add_subdirectory(fi)
add_subdirectory(zh_CN)
add_subdirectory(nn)
add_subdirectory(el)
add_subdirectory(hu)
add_subdirectory(pl)
add_subdirectory(ga)
add_subdirectory(ro)
add_subdirectory(ko)
add_subdirectory(ca)
add_subdirectory(sl)
add_subdirectory(ar)
add_subdirectory(et)
add_subdirectory(pt)
add_subdirectory(bs)
add_subdirectory(ru)
add_subdirectory(pa)
add_subdirectory(uk)
add_subdirectory(ug)
add_subdirectory(fr)
add_subdirectory(de)
add_subdirectory(gl)
add_subdirectory(km)
add_subdirectory(tr)
add_subdirectory(sv)
add_subdirectory(nl)
add_subdirectory(ja)
add_subdirectory(pt_BR)
add_subdirectory(es)
add_subdirectory(en_GB)
add_subdirectory(lt)
add_subdirectory(ms)
add_subdirectory(nds)
add_subdirectory(zh_TW)
add_subdirectory(it)
add_subdirectory(da)
